--- a/MainLibrary/MainLibrary.csproj
+++ b/MainLibrary/MainLibrary.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MessagePack" Version="2.3.85" />
+    <PackageReference Include="MessagePack.Annotations" Version="2.3.85" />
+  </ItemGroup>
+
 </Project>
