Sending works collection

--- a/Server/settings.json
+++ b/Server/settings.json
@@ -1,5 +1,5 @@
 ﻿{
   "Path": {
-    "WorksDirectory": "D:\\Projects\\ProjectCalculis\\TestWork\\bin\\Debug\\net5.0"
+    "WorksDirectory": "C:\\Users\\Misha\\Desktop\\Works"
   }
 }
