--- a/TestWork/TestWork.csproj
+++ b/TestWork/TestWork.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MainLibrary\MainLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
