--- a/MainLibrary/MainLibrary.csproj
+++ b/MainLibrary/MainLibrary.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MessagePack" Version="2.3.85" />
     <PackageReference Include="MessagePack.Annotations" Version="2.3.85" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
