--- a/Server/settings.json
+++ b/Server/settings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "Path": {
+  "Paths": {
     "WorksDirectories": [ "C:\\Users\\Misha\\Desktop\\Works", "C:\\Users\\Ученик\\Documents\\ProjectCalculis" ]
   },
   "Contracts": {
