--- a/MainLibrary/MainLibrary.csproj
+++ b/MainLibrary/MainLibrary.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utilits\" />
+  </ItemGroup>
+
 </Project>
