--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="3.0.0-dev-00065"/>
   </ItemGroup>
 
 </Project>
